Add custom domain route to wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -27,4 +27,10 @@
       "id": "af002dc2109a4685b1b095d3e3812979" // IMPORTANT: Change this to your KV namespace ID
     }
   ]
+  "routes": [
+    {
+      "pattern": "link.rwick.it",
+      "custom_domain": true
+    }  
+  ]
 }
